lib/src/compiler/tests/testdata/errors/38.out
error[E112]: invalid regular expression
 --> line:3:16
  |
3 |     $a = /abc.{-100}xyz/
  |                ^ repetition quantifier expects a valid decimal
  |
  = note: did you mean `\{` instead of `{`?